style.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    overflow-x: hidden;
}
body{
    background: #08114B;
}
nav{
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 15vh;
    background-color: #08114B;
    width: 100%;
}
.logo:hover{
    cursor: pointer;
    opacity: 0.8;
}
.nav-links{
    display: flex;
    justify-content: space-around;
    width: 30%;
}
.nav-links li{
    list-style: none;
}

.nav-links a {
    color: #B42323;
    text-decoration: none;
    font-size: 20px;
    font-weight: bold;
}
.nav-links a:hover{
    color: #C70039;
    background: #6777AC;
    padding: 10px;
    border-radius: 5px;
    transition: 0.2s ease-in;

}
.burger{
    display: none;
    cursor: pointer;
}

.burger div{
    width: 25px;
    height: 4px;
    background-color:#fff;
    margin: 5px;
}

@media screen and (max-width:1024px){
     .nav-links {
         width: 60%;
     }
}
@media screen and (max-width:768px){
    .nav-links {
        width: 50%;
    }


@media screen and (max-width:768px){
    body{
        overflow-x: hidden;
    }
    .nav-links {
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color: #08114B;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 30%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }
    
    .nav-links li {
        opacity: 0;
    }

    .burger {
        display: block;
    }
}

.nav-active {
    transform: translateX(0%);
}

@keyframes navLinkFade {
    from{
        opacity: 0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .line1{
    transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2{
    opacity: 0;
}
.toggle .line3{
    transform: rotate(45deg) translate(-5px, -6px);
}
}

#landing-page{
  background: url("assets/images/bg.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center center;
  height: 90vh;
  width:100%;
}

.button{
    text-align: center;
    align-items: center;
    display: flex;
    justify-content: center;
}

.btn{
    justify-content: center;
    text-align: center;
    background: #BF206D;
    border: none;
    outline: none;
    padding: 20px;
    margin: 20px;
    border-radius: 5px;
    color: #fff;
    text-transform: capitalize;
    font-size: 16px;
    font-weight: bold;
}
.btn:hover{
    color: aquamarine;
    cursor: pointer;
}
.who{
    width: 100%;
    min-height: 20px;
    text-align: center;
    background: #e9dcdc;
    color: #BF206D;
}
.who h2{
    color:#CD5C5C;
    font-size: 300;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    padding: 10px;
    letter-spacing: 2px;
    word-spacing: 10px;
    text-transform: capitalize;

}
.who p{
    font-size: 16px;
    line-height: 25px;
    letter-spacing: 2px;
    word-spacing: 8px;
    margin: 20px;
    padding-bottom: 20px;

}
.column{
    text-align: center;
    float: left;
    width: 25%;
    padding: 10px;
    background: #08114B;
    border: ridge 1px whitesmoke ;
}
.column:hover{
    opacity: 0.5;
    cursor: pointer;
    transition: 0.2s ease-in;
    overflow: hidden;
    padding: 1px;
}

/* Clear floats after image containers */
.row::after {
    content: "";
    clear: both;
    display: table;
  }
  #read{
      width: 100%;
      color: #CD5C5C;
      text-align: center;
  }
  #read h2{
    color:#CD5C5C;
    font-size: 300;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    padding: 10px;
    letter-spacing: 2px;
    word-spacing: 10px;
    text-decoration: underline;
  }
  .column p{
      color: #B20020;
      overflow: hidden;
      display: block;
      margin-top: 1em;
      margin-bottom: 1em;
      margin-left: 0;
      margin-right: 0;
      background: #C4C4C4;
      border-radius: 5px;
  }
  @media screen and (max-width:768px){
    #landing-page{
        background: url("assets/images/bg-bg.jpg");
        background-size: cover;
        /* background-attachment: fixed; */
        background-repeat: no-repeat;
        background-position: center center;
        height: 50vh;
        width: 100%;
      }
    .btn{
       padding: 10px;
       margin: 10px;
       border-radius: 2px;
       font-size: 10px; 
    } 
    .column{
        width: 50%;
        padding: 5px;
    }  
    .column p{
        font-size: 12px;
    }
}

.contact{
    background: url("assets/images/contact.jpg");
    background-size: cover;
    /* background-attachment: fixed; */
    background-position: center center;
    text-align: center;
    color: #fff;
    width: 100%;
    margin-top: 30px;
    /* margin-bottom: 5px; */
    padding: 20px;
    height: 90vh;
}
.contact img{
    padding: 80px;
    margin-top: 30px;
}
.contact h1{
   text-transform: uppercase;
   padding: 0px;
   font-size: 40px;
   margin: 0px;
}

.my_form{
    text-align: center;
    justify-content: center;
    padding: 10px;
    font-size: 30px;
    width: 100%;
}
#contact_form{
    display: block;
    text-align: center;
}

input[type='text']{
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    font-size: 16px;
    width: 50%;
    border-radius: 8px;
    outline: none;
    text-transform: capitalize;
    background-color: #C4C4C4;
    color: #BF206D;
}
input[type='submit']{
    background: #BF206D;
    color: #fff;
    padding: 10px;
    margin: 20px;
    width: 10%;
    outline: none;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
}
.footer{
    width: 100%;
    text-align: center;
    min-height: 30vh;
}
.footer h1{
    font-size: 30px;
    color: #B20020;
    padding: 15px;
    text-transform: capitalize;
}
.footer-links{
    text-align: center;
    float: left;
    width: 33.3%;
    height: 60vh;
    background:#C4C4C4;
    /* padding: 30px; */

    /* margin-top: 50px; */
    border: none;

}

.social_links > ul > li{
    text-decoration: none;
    list-style: none;
    color: #1B065A;
    font-size: 25px;
    padding: 10px;
    justify-content: space-around;
}
.social_links > ul > li:hover{
    color:#B20020; 
    margin: 2px;
    cursor: pointer;
    transition: 0.1s ease-in;

}

.quick-links > ul > li{
    text-decoration: none;
    list-style: none;
    color: #1B065A;
    font-size: 23px;
    padding: 10px;
    justify-content: space-around; 
}
.quick-links > ul > li > a:hover{
    color:#B20020; 
    cursor: pointer;
    transition: 0.1s ease-in;
}
.quick-links > ul > li > a{
    text-decoration: none;
}
.footer-btn > input[type="submit"]{
    background: #BF206D;
    color: #fff;
    padding: 10px;
    margin: 20px;
    width: 30%;
    outline: none;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
}
.footer-btn > input[type="submit"]:hover{
    background:  #1B065A;
    color: #BF206D;
}
.copyright{
    text-align: center;
    justify-content: center;
    background:#C4C4C4;
    width: 100%;
    height: 20vh;
    color: #B20020;
    overflow-y: hidden;
}
.copyright > h3 {
    text-transform: capitalize;
    padding-bottom: 10px;
}

.caret > i{
    font-size: 50px;
    padding: 10px;
}
.caret > i:hover{
    color: #1B065A;
    cursor: pointer;
}

@media screen and (max-width:768px){
    .contact{
    background: url("assets/images/contact-bg.jpg");
    background-size: cover;
    background-position: center center;
    text-align: center;
    color: #fff;
    width: 100%;
    margin-top: 30px;
    padding: 20px;
    height: 115vh;
    }
    .my_form{
        text-align: center;
        justify-content: center;
        padding: 10px;
        font-size: 15px;
        width: 100%;
    }
    input[type='submit']{
        background: #BF206D;
        color: #fff;
        padding: 10px;
        margin-bottom: 10px;
        width: 20%;
        outline: none;
        border: none;
        border-radius: 5px;
        font-size: 10px;
        text-transform: uppercase;
        text-decoration: none;
        cursor: pointer;
    }
    .footer{
        width: 100%;
        text-align: center;
        min-height: 40vh;
    }
    .footer-links{
        text-align: center;
        float: left;
        width: 100%;
        height: 75vh;
        background:#C4C4C4;
        border: none;
    
    }
    .social_links > ul > li{
        font-size: 30px;
        padding: 10px;
    }
    .footer-btn{
        padding: 20px;
    }
    
}

